Labs/K8S-Lab-Capstone/02-apps/31-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hashicorp/http-echo:1.0.0
          args: ["-text=frontend ok", "-listen=:5678"]
          ports:
            - containerPort: 5678
